decided on using a fixed-width side-nav (too much headache otherwize)

--- a/client/style/main.less
+++ b/client/style/main.less
@@ -11,11 +11,15 @@ body {
 }
 
 .body {
-   background: #aaa;
+   background: #ddd;
    height: 100%;
    margin-top: 52px;
-   &.has-selections {
-      margin-top: 90px;
+      display: inline-flex;
+   .content {
+         display: inline-flex;
+         &.has-selections {
+            margin-left: 100px;
+         }
    }
 }
 
@@ -23,6 +27,7 @@ body {
    width: 400px;
    display: inline-block;
    margin-right: 10px;
+   margin: 10px;
 }
 
 .tt {
@@ -33,6 +38,12 @@ body {
 }
 .card-3 {
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  height: 300px;
+  background: #fff;
+}
+
+.important-sidenva {
+
 }
 
 .header {
@@ -40,7 +51,7 @@ body {
    position: fixed;
    top: 0;
    -webkit-backface-visibility: hidden;
-
+box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    .header--top {
       padding: 4px 5px;
       display: flex;
